--- a/package.json
+++ b/package.json
@@ -51,11 +51,12 @@
       "max-params": "off",
       "multiline-ternary": "off",
       "newline-before-return": "off",
-      "no-magic-numbers": ["error", { "ignore": [-1, 0] }],
+      "no-magic-numbers": ["error", { "ignore": [-1, 0, 1] }],
       "no-mixed-requires": "off",
       "no-mixed-spaces-and-tabs": ["error", "smart-tabs"],
       "no-multi-assign": "off",
       "no-multi-spaces": ["error", { "exceptions": { "VariableDeclarator": true } }],
+      "no-param-reassign": "off",
       "no-process-env": "off",
       "no-return-assign": "off",
       "no-shadow": ["error", { "builtinGlobals": true }],
