chore: update lint configuration

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "es6": true
     },
     "rules": {
+      "capitalized-comments": ["error", "always", { "ignoreConsecutiveComments": true }],
       "comma-style": ["error", "last", { "exceptions": { "VariableDeclaration": true } }],
       "curly": ["error", "multi-line"],
       "func-names": ["error", "never"],
