chore: fine tune eslint configuration

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
       "capitalized-comments": ["error", "always", { "ignoreConsecutiveComments": true }],
       "comma-style": ["error", "last", { "exceptions": { "VariableDeclaration": true } }],
       "curly": ["error", "multi-line"],
+      "dot-location": ["error", "property"],
       "func-names": ["error", "never"],
       "global-require": "off",
       "id-length": ["error", { "exceptions": ["e"] } ],
@@ -51,6 +52,7 @@
       "init-declarations": "off",
       "max-len": ["error", 100],
       "max-params": "off",
+      "max-statements": ["error", 10, { "ignoreTopLevelFunctions": true }],
       "multiline-ternary": "off",
       "newline-before-return": "off",
       "no-magic-numbers": ["error", { "ignore": [-1, 0, 1] }],
@@ -59,6 +61,7 @@
       "no-multi-assign": "off",
       "no-multi-spaces": ["error", { "exceptions": { "VariableDeclarator": true } }],
       "no-param-reassign": "off",
+      "no-plusplus": "off",
       "no-process-env": "off",
       "no-return-assign": "off",
       "no-shadow": ["error", { "builtinGlobals": true }],
