--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "domjs-site-tree": "^1.0.1",
     "es5-ext": "^0.10.14",
     "fs2": "^0.2.4",
+    "highlight.js": "^9.10",
     "markdown-it": "^8.3.1",
     "next-tick": "1",
     "parseurl": "^1.3.1",
