--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
       "multiline-ternary": "off",
       "newline-before-return": "off",
       "no-empty": ["error", { "allowEmptyCatch": true }],
+      "no-extra-parens": ["error", "all", { "nestedBinaryExpressions": false }],
       "no-magic-numbers": ["error", { "ignore": [-1, 0, 1] }],
       "no-mixed-requires": "off",
       "no-mixed-spaces-and-tabs": ["error", "smart-tabs"],
