--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "git://github.com/medikoo/onejs.org.git"
   },
   "dependencies": {
+    "autoprefixer": "^6.7.7",
     "builtins": "^1.0.3",
     "compression": "^1.6.2",
     "connect": "^3.6",
