--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
       "id-length": ["error", { "exceptions": ["e"] } ],
       "indent": ["error", "tab"],
       "init-declarations": "off",
+      "line-comment-position": "off",
       "max-len": ["error", 100],
       "max-params": "off",
       "max-statements": ["error", 20, { "ignoreTopLevelFunctions": true }],
@@ -66,6 +67,7 @@
       "newline-before-return": "off",
       "no-empty": ["error", { "allowEmptyCatch": true }],
       "no-extra-parens": ["error", "all", { "nestedBinaryExpressions": false }],
+      "no-inline-comments": "off",
       "no-magic-numbers": ["error", { "ignore": [-1, 0, 1] }],
       "no-mixed-requires": "off",
       "no-mixed-spaces-and-tabs": ["error", "smart-tabs"],
