--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "^2.6.3",
     "deferred": "^0.7.6",
     "dom-ext": "0.1",
+    "domino": "^1.0.28",
     "domjs": "^0.3.1",
     "domjs-site-tree": "^1.0.1",
     "es5-ext": "^0.10.14",
